Revert LED matrix interleaving

--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -11,15 +11,36 @@ CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
 GPDMA1.CIRCULARMODE_GPDMACH0=DISABLE
 GPDMA1.DATAHANDLING_GPDMACH0=ENABLE
+GPDMA1.DATAHANDLING_GPDMACH1=ENABLE
+GPDMA1.DATAHANDLING_GPDMACH2=ENABLE
+GPDMA1.DATAHANDLING_GPDMACH3=ENABLE
 GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
+GPDMA1.DESTDATAWIDTH_GPDMACH1=DMA_DEST_DATAWIDTH_WORD
+GPDMA1.DESTDATAWIDTH_GPDMACH2=DMA_DEST_DATAWIDTH_WORD
+GPDMA1.DESTDATAWIDTH_GPDMACH3=DMA_DEST_DATAWIDTH_WORD
 GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
+GPDMA1.DIRECTION_GPDMACH1=DMA_MEMORY_TO_PERIPH
+GPDMA1.DIRECTION_GPDMACH2=DMA_MEMORY_TO_PERIPH
+GPDMA1.DIRECTION_GPDMACH3=DMA_MEMORY_TO_PERIPH
 GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
-GPDMA1.IPParameters=REQUEST_GPDMACH0,DIRECTION_GPDMACH0,CIRCULARMODE_GPDMACH0,LINKALLOCATEDPORT_CIRCULAR_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,SRCINC_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,DATAHANDLING_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0
+GPDMA1.IPHANDLE_GPDMACH1-SIMPLEREQUEST_GPDMACH1=__NULL
+GPDMA1.IPHANDLE_GPDMACH2-SIMPLEREQUEST_GPDMACH2=__NULL
+GPDMA1.IPHANDLE_GPDMACH3-SIMPLEREQUEST_GPDMACH3=__NULL
+GPDMA1.IPParameters=REQUEST_GPDMACH0,DIRECTION_GPDMACH0,CIRCULARMODE_GPDMACH0,LINKALLOCATEDPORT_CIRCULAR_GPDMACH0,SRCDATAWIDTH_GPDMACH0,DESTDATAWIDTH_GPDMACH0,SRCINC_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,DATAHANDLING_GPDMACH0,REQUEST_GPDMACH1,DIRECTION_GPDMACH1,TRANSFERALLOCATEDPORTSRC_GPDMACH1,SRCINC_GPDMACH1,DESTDATAWIDTH_GPDMACH1,DATAHANDLING_GPDMACH1,REQUEST_GPDMACH2,DIRECTION_GPDMACH2,SRCINC_GPDMACH2,TRANSFERALLOCATEDPORTSRC_GPDMACH2,DESTDATAWIDTH_GPDMACH2,DATAHANDLING_GPDMACH2,IPHANDLE_GPDMACH2-SIMPLEREQUEST_GPDMACH2,IPHANDLE_GPDMACH1-SIMPLEREQUEST_GPDMACH1,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,IPHANDLE_GPDMACH3-SIMPLEREQUEST_GPDMACH3,REQUEST_GPDMACH3,DIRECTION_GPDMACH3,SRCINC_GPDMACH3,TRANSFERALLOCATEDPORTSRC_GPDMACH3,DESTDATAWIDTH_GPDMACH3,DATAHANDLING_GPDMACH3
 GPDMA1.LINKALLOCATEDPORT_CIRCULAR_GPDMACH0=DMA_LINK_ALLOCATED_PORT1
 GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
+GPDMA1.REQUEST_GPDMACH1=GPDMA1_REQUEST_TIM2_UP
+GPDMA1.REQUEST_GPDMACH2=GPDMA1_REQUEST_TIM2_UP
+GPDMA1.REQUEST_GPDMACH3=GPDMA1_REQUEST_TIM2_UP
 GPDMA1.SRCDATAWIDTH_GPDMACH0=DMA_SRC_DATAWIDTH_BYTE
 GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
+GPDMA1.SRCINC_GPDMACH1=DMA_SINC_INCREMENTED
+GPDMA1.SRCINC_GPDMACH2=DMA_SINC_INCREMENTED
+GPDMA1.SRCINC_GPDMACH3=DMA_SINC_INCREMENTED
 GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH0=DMA_SRC_ALLOCATED_PORT1
+GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH1=DMA_SRC_ALLOCATED_PORT1
+GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH2=DMA_SRC_ALLOCATED_PORT1
+GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH3=DMA_SRC_ALLOCATED_PORT1
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -86,25 +107,28 @@ Mcu.Pin38=PB5
 Mcu.Pin39=PB7
 Mcu.Pin4=PC14-OSC32_IN (PC14)
 Mcu.Pin40=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin41=VP_ICACHE_VS_ICACHE
-Mcu.Pin42=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin43=VP_PWR_VS_DBSignals
-Mcu.Pin44=VP_PWR_VS_SECSignals
-Mcu.Pin45=VP_PWR_VS_LPOM
-Mcu.Pin46=VP_PWR_Vdda
-Mcu.Pin47=VP_SYS_VS_Systick
-Mcu.Pin48=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin49=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin41=VP_GPDMA1_VS_GPDMACH1
+Mcu.Pin42=VP_GPDMA1_VS_GPDMACH2
+Mcu.Pin43=VP_GPDMA1_VS_GPDMACH3
+Mcu.Pin44=VP_ICACHE_VS_ICACHE
+Mcu.Pin45=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin46=VP_PWR_VS_DBSignals
+Mcu.Pin47=VP_PWR_VS_SECSignals
+Mcu.Pin48=VP_PWR_VS_LPOM
+Mcu.Pin49=VP_PWR_Vdda
 Mcu.Pin5=PC15-OSC32_OUT (PC15)
-Mcu.Pin50=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin51=VP_LPBAM_VS_SIG1
-Mcu.Pin52=VP_LPBAM_VS_SIG4
-Mcu.Pin53=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin50=VP_SYS_VS_Systick
+Mcu.Pin51=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin52=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin53=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin54=VP_LPBAM_VS_SIG1
+Mcu.Pin55=VP_LPBAM_VS_SIG4
+Mcu.Pin56=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PA0
 Mcu.Pin9=PA1
-Mcu.PinsNb=54
+Mcu.PinsNb=57
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575ZITxQ
@@ -115,6 +139,9 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI5_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.GPDMA1_Channel0_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.GPDMA1_Channel1_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.GPDMA1_Channel2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.GPDMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -439,6 +466,12 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
 VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
+VP_GPDMA1_VS_GPDMACH1.Mode=SIMPLEREQUEST_GPDMACH1
+VP_GPDMA1_VS_GPDMACH1.Signal=GPDMA1_VS_GPDMACH1
+VP_GPDMA1_VS_GPDMACH2.Mode=SIMPLEREQUEST_GPDMACH2
+VP_GPDMA1_VS_GPDMACH2.Signal=GPDMA1_VS_GPDMACH2
+VP_GPDMA1_VS_GPDMACH3.Mode=SIMPLEREQUEST_GPDMACH3
+VP_GPDMA1_VS_GPDMACH3.Signal=GPDMA1_VS_GPDMACH3
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_LPBAMQUEUE_VS_QUEUE.Mode=QUEUEMODE
