Add launch configurations, more GPDMA channels for LED driver

--- a/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-pcb/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -5,13 +5,34 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
 GPDMA1.DATAHANDLING_GPDMACH0=ENABLE
+GPDMA1.DATAHANDLING_GPDMACH1=ENABLE
+GPDMA1.DATAHANDLING_GPDMACH2=ENABLE
+GPDMA1.DATAHANDLING_GPDMACH3=ENABLE
 GPDMA1.DESTDATAWIDTH_GPDMACH0=DMA_DEST_DATAWIDTH_WORD
+GPDMA1.DESTDATAWIDTH_GPDMACH1=DMA_DEST_DATAWIDTH_WORD
+GPDMA1.DESTDATAWIDTH_GPDMACH2=DMA_DEST_DATAWIDTH_WORD
+GPDMA1.DESTDATAWIDTH_GPDMACH3=DMA_DEST_DATAWIDTH_WORD
 GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
+GPDMA1.DIRECTION_GPDMACH1=DMA_MEMORY_TO_PERIPH
+GPDMA1.DIRECTION_GPDMACH2=DMA_MEMORY_TO_PERIPH
+GPDMA1.DIRECTION_GPDMACH3=DMA_MEMORY_TO_PERIPH
 GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
-GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,DESTDATAWIDTH_GPDMACH0,DATAHANDLING_GPDMACH0
+GPDMA1.IPHANDLE_GPDMACH1-SIMPLEREQUEST_GPDMACH1=__NULL
+GPDMA1.IPHANDLE_GPDMACH2-SIMPLEREQUEST_GPDMACH2=__NULL
+GPDMA1.IPHANDLE_GPDMACH3-SIMPLEREQUEST_GPDMACH3=__NULL
+GPDMA1.IPParameters=REQUEST_GPDMACH0,DIRECTION_GPDMACH0,SRCINC_GPDMACH0,TRANSFERALLOCATEDPORTSRC_GPDMACH0,DESTDATAWIDTH_GPDMACH0,DATAHANDLING_GPDMACH0,IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,IPHANDLE_GPDMACH1-SIMPLEREQUEST_GPDMACH1,REQUEST_GPDMACH1,DIRECTION_GPDMACH1,TRANSFERALLOCATEDPORTSRC_GPDMACH1,DESTDATAWIDTH_GPDMACH1,DATAHANDLING_GPDMACH1,SRCINC_GPDMACH1,IPHANDLE_GPDMACH2-SIMPLEREQUEST_GPDMACH2,REQUEST_GPDMACH2,DIRECTION_GPDMACH2,SRCINC_GPDMACH2,TRANSFERALLOCATEDPORTSRC_GPDMACH2,DESTDATAWIDTH_GPDMACH2,DATAHANDLING_GPDMACH2,IPHANDLE_GPDMACH3-SIMPLEREQUEST_GPDMACH3,REQUEST_GPDMACH3,DIRECTION_GPDMACH3,TRANSFERALLOCATEDPORTSRC_GPDMACH3,SRCINC_GPDMACH3,DESTDATAWIDTH_GPDMACH3,DATAHANDLING_GPDMACH3
 GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_TIM2_UP
+GPDMA1.REQUEST_GPDMACH1=GPDMA1_REQUEST_TIM2_UP
+GPDMA1.REQUEST_GPDMACH2=GPDMA1_REQUEST_TIM2_UP
+GPDMA1.REQUEST_GPDMACH3=GPDMA1_REQUEST_TIM2_UP
 GPDMA1.SRCINC_GPDMACH0=DMA_SINC_INCREMENTED
+GPDMA1.SRCINC_GPDMACH1=DMA_SINC_INCREMENTED
+GPDMA1.SRCINC_GPDMACH2=DMA_SINC_INCREMENTED
+GPDMA1.SRCINC_GPDMACH3=DMA_SINC_INCREMENTED
 GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH0=DMA_SRC_ALLOCATED_PORT1
+GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH1=DMA_SRC_ALLOCATED_PORT1
+GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH2=DMA_SRC_ALLOCATED_PORT1
+GPDMA1.TRANSFERALLOCATEDPORTSRC_GPDMACH3=DMA_SRC_ALLOCATED_PORT1
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -120,18 +141,21 @@ Mcu.Pin8=PH0-OSC_IN (PH0)
 Mcu.Pin80=PE0
 Mcu.Pin81=PE1
 Mcu.Pin82=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin83=VP_ICACHE_VS_ICACHE
-Mcu.Pin84=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin85=VP_PWR_VS_SECSignals
-Mcu.Pin86=VP_SYS_VS_Systick
-Mcu.Pin87=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin88=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin89=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin83=VP_GPDMA1_VS_GPDMACH1
+Mcu.Pin84=VP_GPDMA1_VS_GPDMACH2
+Mcu.Pin85=VP_GPDMA1_VS_GPDMACH3
+Mcu.Pin86=VP_ICACHE_VS_ICACHE
+Mcu.Pin87=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin88=VP_PWR_VS_SECSignals
+Mcu.Pin89=VP_SYS_VS_Systick
 Mcu.Pin9=PH1-OSC_OUT (PH1)
-Mcu.Pin90=VP_LPBAM_VS_SIG1
-Mcu.Pin91=VP_LPBAM_VS_SIG4
-Mcu.Pin92=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=93
+Mcu.Pin90=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin91=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin92=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin93=VP_LPBAM_VS_SIG1
+Mcu.Pin94=VP_LPBAM_VS_SIG4
+Mcu.Pin95=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=96
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32U575VITx
@@ -142,6 +166,9 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI5_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.GPDMA1_Channel0_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.GPDMA1_Channel1_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.GPDMA1_Channel2_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
+NVIC.GPDMA1_Channel3_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -617,6 +644,12 @@ TIM7.PeriodNoDither=9
 TIM7.Prescaler=15999
 VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
 VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
+VP_GPDMA1_VS_GPDMACH1.Mode=SIMPLEREQUEST_GPDMACH1
+VP_GPDMA1_VS_GPDMACH1.Signal=GPDMA1_VS_GPDMACH1
+VP_GPDMA1_VS_GPDMACH2.Mode=SIMPLEREQUEST_GPDMACH2
+VP_GPDMA1_VS_GPDMACH2.Signal=GPDMA1_VS_GPDMACH2
+VP_GPDMA1_VS_GPDMACH3.Mode=SIMPLEREQUEST_GPDMACH3
+VP_GPDMA1_VS_GPDMACH3.Signal=GPDMA1_VS_GPDMACH3
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_LPBAMQUEUE_VS_QUEUE.Mode=QUEUEMODE
