--- a/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware-nucleo/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -291,8 +291,9 @@ PE4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE4.GPIO_Label=ENCODER_B
 PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Signal=S_TIM3_CH2
-PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE5.GPIO_Label=ENCODER_SW
+PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
 PE5.Signal=GPXTI5
