Encoder button fix

--- a/firmware/smart-air-hockey-table/smart-air-hockey-table.ioc
+++ b/firmware/smart-air-hockey-table/smart-air-hockey-table.ioc
@@ -163,7 +163,6 @@ MxCube.Version=6.9.2
 MxDb.Version=DB.6.0.92
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.EXTI5_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.GPDMA1_Channel0_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
 NVIC.GPDMA1_Channel1_IRQn=true\:3\:0\:true\:false\:true\:false\:true\:true
@@ -476,12 +475,11 @@ PE4.GPIO_Label=ENCODER_B
 PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
 PE4.Signal=S_TIM3_CH2
-PE5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE5.GPIO_Label=ENCODER_SW
-PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
-PE5.Signal=GPXTI5
+PE5.Signal=GPIO_Input
 PE6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE6.GPIO_Label=LDR1IN
 PE6.GPIO_PuPd=GPIO_PULLUP
@@ -605,8 +603,6 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=320000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
-SH.GPXTI5.0=GPIO_EXTI5
-SH.GPXTI5.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
